fix flickering with subscription

--- a/playgo-mobile/src/app/pages/campaigns/campaign-join/join-company/join-company.modal.scss
+++ b/playgo-mobile/src/app/pages/campaigns/campaign-join/join-company/join-company.modal.scss
@@ -2,3 +2,9 @@
   height: 0px;
   overflow: hidden;
 }
+.info {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 26px;
+}
